# avs-device-sdk

KWD/: CMakeLists.txt
KWD/respeakerd/: CMakeLists.txt
KWD/respeakerd/include/respeakerd/: RespeakerdKeyWordDetector.h
KWD/respeakerd/src/: CMakeLists.txt  RespeakerdKeyWordDetector.cpp
SampleApp/include/SampleApp/: SampleApplication.h  UIManager.h
SampleApp/src/: CMakeLists.txt  KeywordObserver.cpp  SampleApplication.cpp  UIManager.cpp  UserInputManager.cpp  main.cpp
